--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,24 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    text-decoration: none;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,7 +33,7 @@ body {
     font-size: 20px;
 }
 
-.header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -46,12 +47,9 @@ body {
     background-position: center;
 }
 
-a {
+section a, p {
     color: #ffffff;
     text-decoration: none;
-}
-
-p {
     font-size: 16px;
 }
 
@@ -59,8 +57,7 @@ p {
 .content {
     width: 75%;
     display: inline-block;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 20px;
 }
 
 /* i did the same thing with consolidating here, all the multiple class names listed seperately isnt necessary and this saves room! */
@@ -93,7 +90,7 @@ p {
 }
 
 .benefits {
-    margin-right: 20px;
+    margin: 40px 20px;
     padding: 20px;
     clear: both;
     float: right;
@@ -105,7 +102,6 @@ p {
 }
 
 .benefits {
-    margin-bottom: 40px;
     color: #ffffff;
 }
 
@@ -120,7 +116,7 @@ p {
     max-width: 150px;
 }
 /* omittied the 'clear' declaration because it didnt seem to be necessary */
-.footer {
+footer {
     padding: 30px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
